NET-Viewer: Changes

—Update 0

——Revision 4, 03/08/2023.
- `Load URL`.
- `Solid`.
- Brightened application icon.
- Explicit autoplay.
- Fixed ECC timeout operations on drain and flush.
- Moved `Eject` to menu bottom.
- Prompt on loaded file with `Offline Access`.
- `Speed` value follows those of media elements.
- Updated NET-Installer.

——Revision 3, 03/07/2023.
- Cleaned up application icon.
- Event Condensing Coalescer (ECC).
- Factored out more parts shared with J-Card Template.
- Fixed overstretched output with align set to `Stretch`.

——Revision 2, 03/06/2023.
- `Autoplay`.
- `Collapse All`.
- `Expand All`.
- `Reset` per subsection.
- `Reverse` transform control.
- `Right to left`.
- `Rotate`.
- `Scale`.
- `Search`.
- Application icon.
- Changed `Font size` unit to em.
- Grouped controls into accordions.
- Factored out most parts shared with J-Card Template.
- Moved `Close` to `Eject`.
- Moved `Font scale` to `Font size`.
- Moved `Hue` to `Hue rotate`.
- Moved `Reverse` to `Reverse Panels`.
- Moved `Saturation` to `Saturate`.
- Rearranged view menu items.
- Restored header, navigation, and footer in NET-Installer.
- Title-capitalized menu item labels.
- Tweaked panel width for the column layout.
- Use factors instead of percentages where sensible.

——Revision 1, 03/04/2023.
- `Grayscale`.
- `Repeat`.
- Grouped panel view menu items.
- Moved application header to panel under About.
- Nul core text styles follow most of those of the text core.
- Redone loading instructions.
- Text core entry unit suffixes.
- Text core prompts on file sizes greater than 1 MiB.
- Tweaked color bar height and child margin.

——Revision 0, 03/03/2023.
- Initial release.