@@ -6,7 +6,7 @@ noFooter: false
 noHeader: false
 noNavPage: false
 noNavSite: false
-pwaSizeMin: "260 kB"
+pwaSizeMin: "270 kB"
 head:
   title: "NET-Installer"
   manifest: "pwa.webmanifest"
