@@ -1,6 +1,6 @@
-<pre>{{siteTitle}} u{{pageData.version | slice: 7}}r{{pageData.version |
-slice: 18}} by {{author}}, {{pageData.date | date: formDate}}.
-—{{pageData.head.description}}</pre>
+<pre>{{siteTitle}} u{{pageData.version | slice: 7}}r{{pageData.version | slice:
+18}} by {{author}}, {{pageData.date | date: formDate}}.
+—{{siteSubtitle}}</pre>
 <p>Changes made to it are logged to [<{{htmlAOut}}"{{gitHome}}/net-viewer/raw/master/CHANGES"
 >CHANGES</a>].</p>
 <details>
