@@ -58,7 +58,7 @@
 </section>
 <section>
   <div class="field row space-between" id="field-filter-reset">
-    <div class="input short">
+    <div class="input shorter">
       <button id="button-filter-reset" type="button">Reset</button>
     </div>
   </div>
