@@ -10,7 +10,7 @@ own.</p>
 </section>
 <section>
   <div class="field row space-between" id="field-frame-reset">
-    <div class="input short">
+    <div class="input shorter">
       <button id="button-frame-reset" type="button">Reset</button>
     </div>
   </div>
