@@ -28,7 +28,7 @@
   </div>
   <div class="field row" id="field-media-search">
     <label>Search:</label>
-    <div class="input short">
+    <div class="input shorter">
       <button id="button-media-search-n05" type="button">⏪&#xFE0E; −05 s</button>
       <button id="button-media-search-p05" type="button">+05 s ⏩&#xFE0E;</button>
       <button id="button-media-search-n20" type="button">⏪&#xFE0E; −20 s</button>
@@ -37,8 +37,9 @@
   </div>
 </section>
 <section>
-  <div class="field row space-between" id="field-media-reset">
-    <div class="input short">
+  <div class="field row space-between" id="field-media-actions">
+    <div class="input shorter">
+      <button id="button-media-show-controls" type="button">Show Controls</button>
       <button id="button-media-reset" type="button">Reset</button>
     </div>
   </div>
