@@ -25,7 +25,7 @@
 </section>
 <section>
   <div class="field row space-between" id="field-position-reset">
-    <div class="input short">
+    <div class="input shorter">
       <button id="button-position-reset" type="button">Reset</button>
     </div>
   </div>
