@@ -40,7 +40,7 @@
 </section>
 <section>
   <div class="field row space-between" id="field-text-reset">
-    <div class="input short">
+    <div class="input shorter">
       <button id="button-text-reset" type="button">Reset</button>
     </div>
   </div>
