@@ -22,7 +22,7 @@
 </section>
 <section>
   <div class="field row space-between" id="field-transform-reset">
-    <div class="input short">
+    <div class="input shorter">
       <button id="button-transform-reset" type="button">Reset</button>
     </div>
   </div>
